--- a/location.css
+++ b/location.css
@@ -103,6 +103,10 @@
 .footer-logos-2 {
   margin: 60px 32px;
 }
+
+
+
+/*responsive*/
 @media screen and (min-width: 768px) {
   .container-2 {
     width: 768px;
@@ -110,10 +114,10 @@
     background-color: var(--backGround);
   }
   .map-container {
-    margin-top: 0;
     height: 600px;
   }
   .loc-description {
+     margin-top:-24px;
     display: flex;
     justify-content: space-between;
     width: 768px;
@@ -155,8 +159,68 @@
     margin-top: 56px;
     width: 281px;
   }
-  .footer-logos-2 {
-    margin-top: 56px;
-    margin: 60px 32px;
-  }
+}
+@media screen and (min-width: 1440px) {
+.container-2 {
+   width: 1440px;
+   height: 1400px;
+ }
+ .map-container {
+   height: 685px;
+ }
+ .loc-description {
+    margin-top: -110px;
+    display: flex;
+    justify-content: space-evenly;
+   width: 1440px;
+   height: 548px;
+ }
+ .loc-title {
+   width: 350px;
+   height: 140px;
+   font-size: 70px;
+   line-height: 70px;
+ }
+ .loc-text h2 {
+   color: var(--beige);
+   width: 350px;
+   height: 36px;
+   font-size: 36px;
+   line-height: 36px;
+ }
+ .loc-text h5 {
+   width: 445px;
+   height: 96px;
+   line-height: 32px;
+   font-size: 22px;
+ }
+ .loc-text p {
+   color: var(--white);
+   width: 540px;
+   height: 128px;
+   font-size: 22px;
+   line-height: 32px;
+ }
+ .loc-footer {
+    display: flex;
+    justify-content: space-evenly;
+   width: 1440px;
+   height: 244px;
+ }
+ .dark-logo {
+   padding-top: 20px;
+   width: 159px;
+   height: 78px;
+ }
+ .loc-footer p {
+  padding-top: 20px;
+   width: 430px;
+   height: 84px;
+   font-size: 18px;
+   line-height: 28px;
+ }
+ .footer-logos-2 {
+   padding-top: 20px;
+  display: flex;
+}
 }
